--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -102,3 +102,9 @@ input::-webkit-inner-spin-button {
 // input[type='number'] {
 // 	-moz-appearance: textfield;
 // }
+
+.error {
+	color: #8d2b3d;
+	font-size: 1.8rem;
+	margin-bottom: 0.2rem;
+}
