--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -31,6 +31,7 @@
 	color: $white;
 	font-size: 30px;
 	font-weight: bold;
+	text-align: center;
 	@media (max-width: $mobile) {
 		font-size: 24px;
 	}
