--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,16 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap');
 
-$accent: #b53471;
-$white: #f1e8e8;
-$black: darken($accent, 38%);
-$hard-dark-accent: darken($accent, 30%);
-$dark-accent: darken($accent, 18%);
+//$accent: #b53471;
+// $white: #f1e8e8;
+// $black: darken($accent, 38%);
+// $hard-dark-accent: darken($accent, 30%);
+// $dark-accent: darken($accent, 18%);
+// $bx-accent: 0 4px 4px rgba($accent, 0.25);
+// $bx-16: 0 3px 6px rgba(0, 0, 0, 0.16);
 
-/* https://dribbble.com/shots/17358553-Sportly-Running-Record-Stats-Activity-Log-and-Challenge */
+$accent: #383e63;
+$white: #f1e8e8;
+$hard-dark-accent: darken($accent, 30%);
+
+// $dark-accent: #212644;
+$dark-accent: #212644;
+
+$tmp-dark: #15152d;
+$tmp-1-dark: #191934;
+$tmp-white: #fefffc;
+$tmp-gradient: linear-gradient(to right, #915ffe 0%, #6b4afd 100%);
+$tmp-1-gradient: linear-gradient(to right, #d981f9 0%, #9170fd 100%);
+$tmp-per: #9883e5;
+$tmp-acc-light: #a788f9;
+$tmp-acc-dark: #684afd;
 
 $bx-accent: 0 4px 4px rgba($accent, 0.25);
 $bx-16: 0 3px 6px rgba(0, 0, 0, 0.16);
 
+$my-bx: 7px 7px 17px 1px #0d0e20;
+$my-border: 2px solid #2b2c4b;
+
 $default-font: 'Sofia Sans', sans-serif;
 
 $mobile: 480px;
+
+$my-background-gradient: linear-gradient(to bottom, #171a3b 0%, #111227 100%);
+$my-bg2: linear-gradient(135deg, #25294c 0%, #111227 100%);
+
+$time: #deb6b6;
+$error: #870046;
+$some: $white;
+$s2ome: #870046;
