--- a/src/components/screens/auth/Auth.module.scss
+++ b/src/components/screens/auth/Auth.module.scss
@@ -1,6 +1,7 @@
 @import 'src/assets/styles/variables';
 
 .wrapperButtons {
+	margin: 15px 0 25px 0;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -9,15 +10,6 @@
 		width: 48%;
 		> button {
 			width: 100%;
-		}
-		&:last-child > button {
-			background-color: #20366b;
-			opacity: 0.8;
-			transition: opacity 0.15s ease;
-			&:hover {
-				background-color: #29478c;
-				opacity: 1;
-			}
 		}
 	}
 }
