--- a/src/components/screens/new-exercise/NewExercise.module.scss
+++ b/src/components/screens/new-exercise/NewExercise.module.scss
@@ -4,11 +4,11 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: 0.7rem;
+	margin-top: 1.5rem;
 	margin-bottom: 2rem;
 
 	> img {
-		margin: 0 0.5rem;
+		margin: 0 0.9rem;
 		cursor: pointer;
 		border-bottom: 2px solid transparent;
 		padding-bottom: 0.5rem;
@@ -16,8 +16,8 @@
 		opacity: 0.4;
 
 		&.active {
-			opacity: 0.6;
-			border-color: $accent;
+			opacity: 0.9;
+			border-bottom: 2px solid $tmp-acc-light;
 		}
 	}
 }
