--- a/src/components/screens/singleExercise/ExerciseLog.module.scss
+++ b/src/components/screens/singleExercise/ExerciseLog.module.scss
@@ -12,9 +12,11 @@
 
 .wrapper {
 	border-radius: 10px;
-	background-color: $hard-dark-accent;
+	background-color: $dark-accent;
 	margin: 0 auto;
 	width: 90%;
+	box-shadow: $my-bx;
+	border: $my-border;
 
 	> .row {
 		display: flex;
@@ -35,10 +37,10 @@
 			> i,
 			> span,
 			> input {
-				font-size: 18px;
+				font-size: 20px;
 				color: $white;
 				@media (max-width: $mobile) {
-					font-size: 16px;
+					font-size: 20px;
 				}
 			}
 
@@ -68,8 +70,8 @@
 
 			&:nth-child(2) {
 				width: 50%;
-				border-left: 1px solid rgba($dark-accent, 0.6);
-				border-right: 1px solid rgba($dark-accent, 0.6);
+				border-left: 1px solid $accent;
+				border-right: 1px solid $accent;
 				@media (max-width: $mobile) {
 					width: 40%;
 				}
@@ -77,7 +79,7 @@
 		}
 
 		&:first-child {
-			border-bottom: 1px solid rgba($dark-accent, 0.6);
+			border-bottom: 1px solid $accent;
 			@media (max-width: $mobile) {
 				> div > span {
 					font-size: 14px;
@@ -91,13 +93,13 @@
 
 		&.completed {
 			> div {
-				color: $accent;
+				color: #b53471;
 				> i {
 					margin: 0 -1px;
 				}
 				> input,
 				> i {
-					color: $accent;
+					color: #b53471;
 					text-decoration: line-through;
 					cursor: default;
 				}
