--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -19,7 +19,7 @@ $tmp-dark: #15152d;
 $tmp-1-dark: #191934;
 $tmp-white: #fefffc;
 $tmp-gradient: linear-gradient(to right, #915ffe 0%, #6b4afd 100%);
-$tmp-1-gradient: linear-gradient(to right, #d981f9 0%, #9170fd 100%);
+$tmp-1-gradient: linear-gradient(to right, #d981f9dd 0%, #9170fdc5 100%);
 $tmp-per: #9883e5;
 $tmp-acc-light: #a788f9;
 $tmp-acc-dark: #684afd;
