--- a/src/components/ui/alert/Alert.module.scss
+++ b/src/components/ui/alert/Alert.module.scss
@@ -19,8 +19,8 @@
 	&.info {
 		background-color: #50c1e9;
 	}
-	&.waring {
-		background-color: #f75940;
+	&.warning {
+		background-color: #f758409b;
 		color: $white;
 	}
 }
