--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -33,8 +33,9 @@
 }
 
 .accent {
-	background: $tmp-gradient;
+	background: $tmp-1-gradient;
 }
+
 .danger {
-	background: #a20062;
+	background: #6491c9;
 }
