--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -84,11 +84,11 @@ img {
 	display: block;
 	margin-bottom: 0.5rem;
 	text-decoration: none;
-	color: #7f55fe;
+	color: #ad6ace;
 	transition: color 0.3s ease;
 
 	&:hover {
-		color: $tmp-acc-light;
+		color: #785dcf;
 	}
 }
 
