--- a/src/components/ui/field/Field.module.scss
+++ b/src/components/ui/field/Field.module.scss
@@ -13,7 +13,7 @@
 	width: 100%;
 
 	&:focus {
-		background-color: rgba($accent, 0.3);
+		background-color: lighten($accent, 5%);
 	}
 
 	&::placeholder {
