change img + auth

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -37,7 +37,7 @@ $mobile: 480px;
 $my-background-gradient: linear-gradient(to bottom, #171a3b 0%, #111227 100%);
 $my-bg2: linear-gradient(135deg, #25294c 0%, #111227 100%);
 
-$time: #deb6b6;
+$time: #fc8fd6dd;
 $error: #870046;
 $some: $white;
 $s2ome: #870046;
