--- a/src/components/screens/profile/Profile.module.scss
+++ b/src/components/screens/profile/Profile.module.scss
@@ -1,32 +1,9 @@
 @import 'src/assets/styles/variables';
 
-.before_after {
-	display: flex;
-	justify-content: space-between;
-	text-align: center;
-
-	@media (max-width: $mobile) {
-		width: 90%;
-		margin: 0 auto;
+.wrapper {
+	> h2 {
+		color: $white;
+		margin-bottom: 15px;
+		font-size: 24px;
 	}
-
-	> div {
-		width: 50%;
-		@media (max-width: $mobile) {
-			width: 48%;
-		}
-	}
-	img {
-		width: 200px;
-		height: 300px;
-		border-radius: 10px;
-	}
-	.heading {
-		margin-bottom: 0.5rem;
-	}
-}
-
-.center {
-	text-align: center;
-	margin: 6px 0 18px;
 }
